Adding City name

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
               alt="Weather Icon"
             /> -->
           </div>
+          <div class="weather_temperature" id="selectedCity"></div>
           <div class="weather_temperature" id="weatherTemperature"></div>
           <div class="weather_desc" id="weatherDesc"></div>
           <div class="weather_details" id="weatherDetails">
