--- a/index.html
+++ b/index.html
@@ -33,6 +33,6 @@
         </div>
       </div>
     </main>
-    <script src="/assets/js/script.js"></script>
+    <script src="assets/js/script.js"></script>
   </body>
 </html>
